terraform/04-aks/k8s-manifests/istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: platform-tls-secret
      hosts:
        - "*.platform.example.com"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.platform.example.com"
      tls:
        httpsRedirect: true
